--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,37 @@ body {
 .blockElement {
   display: block;
 }
+
+.background {
+  position: fixed;
+  width: 75vw;
+  height: 50vh;
+  top:0;
+  left:12.5vw;
+  background-color: gray;
+  overflow: scroll;
+}
+
+
+.listView {
+  position: relative;
+  width: 100%;
+  height: 15%;
+  display: block;
+  background-color: azure;
+  margin-bottom: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  overflow:scroll;
+}
+
+.message {
+  font-weight: bold;
+  /* Add additional styling for the message content */
+}
+
+.timestamp {
+  color: #888888;
+  /* Add additional styling for the timestamp */
+}
