--- a/src/App.css
+++ b/src/App.css
@@ -3,28 +3,91 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+
+
 .App {
   height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  
 }
 
 .blockElement {
   display: block;
 }
-
-.background {
+.setter {
   position: fixed;
-  width: 75vw;
-  height: 50vh;
-  top:0;
-  left:12.5vw;
-  background-color: gray;
-  overflow: scroll;
+  left:5%;
+  bottom: 5%;
 }
 
+.myBackground {
+  top:0;
+  position:fixed;
+  z-index:-2;
+  width:100vw;
+  height:100vh;
+  background-color: lightblue;
+}
+
+.search-label {
+  
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  background: rgb(231, 222, 223);
+  padding: 2%;
+  cursor: text;
+  margin-bottom: 2%;
+  margin-right: 2%;
+}
+
+.search-label:hover {
+  border-color: gray;
+}
+
+.search-label:focus-within {
+  background: rgb(231, 222, 223);;
+  border-color: gray;
+}
+
+.search-label input {
+  position: relative;
+  margin-top: 2%;
+  outline: none;
+  width: 15vw;
+  height: 5vh;
+  border: none;
+  background: none;
+  color: rgb(162, 162, 162);
+}
+
+
+.submitButton {
+
+  width: 3vw;
+  height: 5vh;
+  position:fixed;
+  right:2vw;
+  bottom:2vh;
+  background-color: lightgreen;
+}
+
+.background {
+  z-index:-1;
+  position: fixed;
+  width: 40vw;
+  height: 50vh;
+  top:5%;
+  left:10%;
+  background-color: rgb(231, 222, 223);
+  overflow: scroll;
+  border-radius: 2%;
+  
+}
 
 .listView {
   position: relative;
@@ -32,11 +95,10 @@ body {
   height: 15%;
   display: block;
   background-color: azure;
-  margin-bottom: 1%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  overflow:scroll;
+  margin-bottom: 2%;
 }
 
 .message {
@@ -47,4 +109,80 @@ body {
 .timestamp {
   color: #888888;
   /* Add additional styling for the timestamp */
+}
+
+.instructionManual {
+  position: fixed;
+  top:2% ;
+  right:5%;
+  width: 40vw;
+  height: 50vh;
+
+}
+.instructionManual > * {
+  display: block;
+}
+.heading {
+  text-align: center;
+  font-size: 3vw;
+  color: white;
+  font-family:'roboto';
+  letter-spacing: 1.5;
+  font-weight: bold;
+}
+
+.headerImage {
+  width: 10vw;
+  height: 15vh;
+  filter: brightness(1);
+  border:none;
+  background-color: transparent;
+}
+
+.normalText {
+  text-align: center;
+  font-size: 1.5vw;
+  color: white;
+  font-family:'roboto';
+  letter-spacing: 1.5;
+}
+
+.promptFormatting {
+  position: fixed;
+  bottom: 5vh;
+  left: 25vw;
+  width: 30vw;
+  height: 35vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  
+}
+.promptOption {
+  top:0;
+  position:relative;
+  width:30vw;
+}
+.radioRow {
+  display:flex;
+  justify-content: space-evenly;
+}
+
+.promptGeneration {
+  align-items: center;
+  position: fixed;
+  bottom: 2vh;
+  right: 10vw;
+  background-color: rgb(231, 222, 223);
+  width: 30vw;
+  height: 40vh;
+}
+
+.generatedText {
+  margin-left: 2.5vw;
+  position: relative;
+  width: 25vw;
+  height: 30vh;
+  background-color: white;
+
 }
