--- a/src/MyComponents/datetime.css
+++ b/src/MyComponents/datetime.css
@@ -1,8 +1,3 @@
-.controlElements {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
+.datepicker {
+    width: 16.5vw;
 }
